--- a/references.bib
+++ b/references.bib
@@ -665,3 +665,19 @@ chapter={14}
   publisher={De Gruyter},
   doi = {10.2202/1557-4679.1329}
 }
+
+@manual{mc-stan2024finite,
+  title        = {Finite Mixtures and Zero-inflated Models},
+  author       = {Stan Development Team},
+  year         = {2024},
+  url          = {https://mc-stan.org/docs/stan-users-guide/finite-mixtures.html#zero-inflated.section},
+  note         = {Accessed: 2024-09-29}
+}
+
+@misc{heiss2022hurdle,
+  author       = {Andrew Heiss},
+  title        = {A guide to modeling outcomes that have lots of zeros with Bayesian hurdle lognormal and hurdle Gaussian regression models},
+  year         = {2022},
+  url          = {https://www.andrewheiss.com/blog/2022/05/09/hurdle-lognormal-gaussian-brms/},
+  note         = {Accessed: 2024-09-29}
+}
