--- a/rct_basic.qmd
+++ b/rct_basic.qmd
@@ -8,7 +8,7 @@ share:
   mastodon: true
 ---
 
-![Randomization](img/randomization.png){.lightbox}
+<img src="img/randomization.png" align="right" height="280" alt="Randomization" />
 
 It is crucial to recognize that randomization isn't magic. When a sufficiently
 large population is randomly divided into two groups, these groups will be
@@ -71,7 +71,9 @@ interference and inconsistency, researchers and practitioners can design more
 robust experiments and make more informed decisions based on their findings.
 :::
 
-## An example using code <img src="https://github.com/google/imt/blob/main/man/figures/logo.png?raw=true" align="right" height="138" alt="" />
+## An example using code 
+
+<img src="https://github.com/google/imt/blob/main/man/figures/logo.png?raw=true" align="right" height="138" alt="" />
 
 The [{imt}](https://github.com/google/imt) package provides a convenient way to
 randomize while ensuring baseline equivalence. The `imt::randomize` function
